fix scroll bar content shift

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,11 @@
     font-style: italic;
 }
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
     color: var(--text-color);
     background-color: var(--background-color);
